Changes in NUnitAsp 1.3:
Produced by Jim Little.
* Browser.ElapsedServerTime now works.
* Added support for multiline text boxes.  Thanks to (luKa) for his submission.


Changes in NUnitAsp 1.2.1:
Produced by Jim Little.
* NUnit 2.0 support.  Thanks to R. Owen Rogers and Drew Noakes for their submissions.
* NUnit 2.0 migration guide.
* Compilation FAQ question.
* Minor documentation fixes.


Changes in NUnitAsp 1.2:
Produced by Jim Little.
* Documentation.  Lots of it.
* Added support for pop-up windows in AnchorTester (thanks to Jacob Lawlor)
* 404 errors no longer occur when retrieving links to document fragments (http://foo.com/index.html#name).  The fragment link is ignored and the main page is retrieved.
* Fixed attribute parsing so it ignores case.
* Added support for changing browser user-agent.
* Pages are no longer parsed unless strictly necessary.
* Cleaned up build and distribution.  All necessary files are now included.
* API documentation.  Many thanks to Mitchel Burns for figuring out how to generate the files.