@@ -1,7 +1,8 @@
-Changes in NUnitAsp 1.3:
+Changes in next version:
 Produced by Jim Little.
 * Browser.ElapsedServerTime now works.
 * Added support for multiline text boxes.  Thanks to (luKa) for his submission.
+* Updated installation guide for error caused by XMLSpy.  Thanks to Peter Wijntjes.
 
 
 Changes in NUnitAsp 1.2.1:
